# post-quantum-crypto-demo

./: .gitignore  README.md  cleanup.py  decrypt.py  encrypt.py  mock_data.txt  private_key.txt  public_key.txt  pyproject.toml  rsa_private_key.pem  rsa_public_key.pem  setup.py
hr_portal_backend/: README.md  hr_portal.db  pyproject.toml
hr_portal_backend/hr_portal_backend/: app.py  hr_portal.db
hr_portal_backend/hr_portal_backend/utils/: auth.py  database.py  encryption.py
hr_portal_backend/tests/: test_auth.py
hr_portal_frontend/: package-lock.json  package.json
hr_portal_frontend/src/: App.css  App.tsx
hr_portal_frontend/src/api/: auth.ts  user.ts
hr_portal_frontend/src/components/: AuthForm.tsx  UserInfoForm.tsx
hr_portal_frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  LoginPage.tsx  LoginSignupPage.css  LoginSignupPage.tsx  UserInfoPage.css  UserInfoPage.tsx
