[tool.poetry]
name = "post-quantum-crypto"
version = "1.0.0"
description = "Backend for a quantum crypto safe HR system"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^3.3.0"
liboqs-python = { git = "https://github.com/open-quantum-safe/liboqs-python.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"