[tool.poetry]
name = "hr-portal-backend"
version = "0.1.0"
description = "Backend for a quantum crypto safe HR portal"
authors = ["Abhishek Mahajan <am13801@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
